# Polistemics

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml
configs/: models.yaml
configs/experiments/: template.example.yaml
configs/prompts/: default_user.txt  judge.txt  system.txt
scripts/: collect.py  evaluate.py
src/analysis/: __init__.py  ablation.py  aggregate.py  display_names.py  notebook_helpers.py  plotting.py  replication.py  tidy.py
src/collect/: cost_tracker.py  pipeline.py  prompts.py  refusal.py
src/common/: adapters.py  benchmark_sample.py  config.py  config_hash.py  context_format.py  io.py  log.py  model_call.py  model_factory.py  progress.py  prompts.py  schemas.py  settings.py  text.py  tracking.py
src/evaluate/: README.md  dispatcher.py  filter.py  panel.py  pipeline.py
src/metrics/: README.md  __init__.py  base.py  epistemic_calibration.py  factory.py  faithfulness.py  impartiality.py  registry.py  rubric.py
tests/: conftest.py  synthetic_dataset_cases.md  test_base_metric.py  test_config.py  test_cost_tracker.py  test_eval_pipeline.py  test_filter.py  test_gt_sidecar.py  test_io.py  test_logging.py  test_metric_contracts.py  test_metric_factory.py  test_model_call.py  test_panel.py  test_pipeline.py  test_progress.py  test_prompts.py  test_refusal.py  test_schemas.py  test_settings.py  test_tracking.py
tests/analysis/: test_ablation.py  test_aggregate.py  test_plotting_country.py  test_replication.py  test_tidy.py
tests/collect/: test_prompts.py
tests/common/: test_config_hash.py
tests/evaluate/: test_dispatcher.py  (+1 more)
(+105 files in other folders)
